<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationFragment">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registration_welcome_title"
        app:layout_constraintVertical_bias="0.4"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginHorizontal="@dimen/screen_side_margin"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        app:layout_constraintBottom_toTopOf="@+id/welcomeSubtitle"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/welcomeSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/registration_welcome_subtitle"
        android:layout_marginHorizontal="@dimen/screen_side_margin"
        app:layout_constraintBottom_toTopOf="@+id/emailInputContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/all_email"
        android:layout_marginHorizontal="@dimen/screen_side_margin"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputContainer"
        app:layout_constraintTop_toBottomOf="@+id/welcomeSubtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/roboto_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputContainer"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_side_margin"
        android:hint="@string/all_password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/emailInputContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:text="@string/all_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/screen_side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>